prevent code block from exceeding max width by wrapping contents

--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -6,21 +6,7 @@
   padding-bottom: 20px;           /* Dividing padding to give the title space to breathe */
 }
 
-/* Ensure that the article and back button are in a column, placing the button on top. */
-.articleContainer {
-  display: flex;
-  flex-direction: column;
-  position: relative;     /* Position article container relative to its normal position */
+div.highlight pre {
+  white-space: pre-wrap;          /* Ensures that code blocks wrap when width is too small */
 }
 
-.projectsBackButton {
-  width: 150px;           /* Prevents button from expanding to the max width */
-  float: right;           /* Lock to the right */
-  position: absolute;     /* Position button to nearest positioned ancestor (.articleContainer) */
-  top: 0;                 /* Position at the top of the container */
-  right: 0;               /* Position at the right of the container */
-}
-
-.projectsBackButtonContainer {
-  margin-bottom: 20px;    /* Give some space to the article title */
-}
